fix: blurry text

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -51,7 +51,6 @@ body {
   background: rgba(174, 173, 173, 0.08);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(2.4px);
   -webkit-backdrop-filter: blur(2.4px);
   border: 1px solid rgba(174, 173, 173, 0.3);
   border-radius: 25px;
@@ -90,7 +89,6 @@ body {
   background: rgba(174, 173, 173, 0.08);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(2.4px);
   -webkit-backdrop-filter: blur(2.4px);
   border: 1px solid rgba(174, 173, 173, 0.3);
   border-radius: 25px;
@@ -103,7 +101,6 @@ body {
   background: rgba(174, 173, 173, 0.08);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(2.4px);
   -webkit-backdrop-filter: blur(2.4px);
   border: 1px solid rgba(174, 173, 173, 0.3);
   border-radius: 25px;
